src/objects/c2g__AsOfAging__c.object
<CustomObject>
    <customHelpPage>c2g__helpasofaging</customHelpPage>
    <description>Stores information about the As of Aging process for the owned company.</description>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__AsOfDate__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcessStatus__c</fullName>
        <formula>TEXT(c2g__BatchProcess__r.c2g__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>As of Aging</relationshipLabel>
        <relationshipName>AsOfAging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>As of Aging</relationshipLabel>
        <relationshipName>AsofAging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessCompleted__c</fullName>
        <label>Process Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessStarted__c</fullName>
        <label>Process Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>As of Aging</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_AsOfAging</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_AsOfAging</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_AsOfAging</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__ProcessCompleted__c</columns>
        <columns>c2g__ProcessStarted__c</columns>
        <columns>c2g__AsOfDate__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__ProcessStatus__c</columns>
        <columns>c2g__BatchProcessStatus__c</columns>
        <columns>c2g__BatchProcess__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>c2g__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AOA{0000000}</displayFormat>
        <label>As of Aging Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>As of Aging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>